--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
+
+<head>
+    <title>My website</title>
+</head>
+
+<body style="color: #beeeee;">
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
